--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Desktop image drawing app",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+		"build": "cd ./angular2 && ng build --base-href ./"
   },
   "repository": {
     "type": "git",
