--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-		"build": "cd ./angular2 && ng build --base-href ./"
+		"build": "cd ./angular2 && ng build --base-href ./",
+		"s": "npm run build && npm start"
   },
   "repository": {
     "type": "git",
