--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-		"build": "cd ./angular2 && ng build --base-href ./",
-		"s": "npm run build && npm start"
+    "build": "cd ./angular2 && ng build --base-href ./",
+    "s": "npm run build && npm start"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/Ftujio/ImageDrawer#readme",
   "dependencies": {
-    "electron": "^1.6.11"
+    "electron": "^1.6.11",
+    "jquery": "^2.2.4"
   },
   "devDependencies": {}
 }
