--- a/angular2/package.json
+++ b/angular2/package.json
@@ -25,6 +25,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^2.2.4",
     "materialize-css": "^0.98.2",
+    "paper": "^0.11.4",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
