--- a/angular2/package.json
+++ b/angular2/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/paper": "^0.9.2",
     "angular2-materialize": "^15.0.4",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
