--- a/package.json
+++ b/package.json
@@ -23,5 +23,7 @@
     "jquery": "^2.2.4",
     "paper": "^0.11.4"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "webpack": "^3.0.0"
+  }
 }
