--- a/package.json
+++ b/package.json
@@ -21,7 +21,5 @@
     "jquery": "^2.2.4",
     "paper": "^0.11.4"
   },
-  "devDependencies": {
-    "webpack": "^3.0.0"
-  }
+  "devDependencies": {}
 }
